# CCA

./: README.en.md  README.md
CCA/: README.md
CCA/docs/: README.md
CCA/docs/rme_docker_on_fvp_addition_files/: build-scripts.patch  buildroot_config  custom.sh
doc/: rme_on_qemu.md
docs/: kvm-unit-tests-cca-guide.md  rme_docker_on_fvp.md
docs/en/24.03-LTS-SP3/: _toc.yaml  cca_user_guide.md  introduction_to_cca.md
docs/en/2509/: _toc.yaml
docs/en/master/: _toc.yaml  cca_user_guide.md
docs/rme_docker_on_fvp_addition_files/: buildroot_config  cmd_before_build.sh
docs/zh/24.03-LTS-SP3/: _toc.yaml  cca_user_guide.md  cca_user_guide_kunpeng.md
docs/zh/2509/: cca_user_guide.md
docs/zh/master/: cca_user_guide.md  introduction_to_cca.md
driver/hinic3/: 0001-drivers-hinic3-CCA-supports-hinic3-SR-IOV.patch
driver/nvme/: 0001-drivers-nvme-CCA-supports-NVMe-SR-IOV.patch
driver/rme_acc/: Makefile  rme_acc.h  rme_acc_drv.c  rme_dae.c  rme_hpre.c  rme_hpre.h  rme_sec.c  rme_sec.h  rme_zip.c  rme_zip.h
sdk/attestation/cvm-image-rewriter/: README.md  create-oe-image.sh  measure_pe.c
sdk/attestation/rim_ref/: CMakeLists.txt  README.md
sdk/attestation/rim_ref/inc/: gen_rim_ref.h
sdk/attestation/rim_ref/src/: gen_rim_ref.c
sdk/attestation/samples/: CMakeLists.txt  README.en.md
sdk/attestation/samples/include/: common.h  event_log.h  rem.h  token_parse.h
sdk/coco/: README.md
sdk/coco/config/: Dockerfile  config.json  rvstore.json  tastore.json
sdk/coco/docs/: 部署远程证明组件.md
sdk/coco/patches/: CCA-Token-Parsing-Adaptation-for-Kunpeng-Platform.patch
(+7 files in other folders)
